--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
             <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/CesiumMan.gltf"></a-asset-item>
         </a-assets>
 
-        <a-marker type='barcode' value='7'>
-            <a-box position='0 0.5 0' color="yellow"></a-box>
+        <a-marker type='pattern' patternUrl='https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/pattern-06-barcode.patt' >
+            <a-entity
+                animation-mixer
+                gltf-model="#animated-asset"
+                scale="2 2 2">
+            </a-entity>
         </a-marker>
 
         <a-marker id="animated-marker" type='barcode' value='6'>
