--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 
     <body style='margin : 0px; overflow: hidden;'>
-        <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
         <a-assets>
@@ -16,20 +15,20 @@
         </a-assets>
 
         <a-marker type='pattern' patternUrl='https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/pattern-06-barcode.patt' >
-            <a-entity
+            <!-- <a-entity
                 animation-mixer
                 gltf-model="#animated-asset"
                 scale="2 2 2">
-            </a-entity>
+            </a-entity> -->
         </a-marker>
 
-        <a-marker id="animated-marker" type='barcode' value='6'>
+        <!-- <a-marker id="animated-marker" type='barcode' value='6'>
             <a-entity
                 animation-mixer
                 gltf-model="#animated-asset"
                 scale="2 2 2">
             </a-entity>
-        </a-marker>
+        </a-marker> -->
 
         <a-entity camera></a-entity>
         </a-scene>
