Adding another pattern

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <a-box position='0 0.5 0' color="yellow"></a-box>
         </a-marker>
 
-        <a-marker-camera preset='custom' type='pattern' url='models/pattern-BasePlane.patt'>
+        <a-marker preset='custom' type='pattern' url='models/pattern-Postcard-10.patt'>
             <a-image id="test" src="models/base 1-10.jpg" position="0 0 0" rotation="-90 0 0" width="" height="" opacity="0.85" transparent="true" alpha-test="0.2" shader="standard" scale="1 1 1" visible="" material="" geometry=""></a-image>
-        </a-marker-camera>
+        </a-marker>
 
         <a-marker id="animated-marker" type='barcode' value='6'>
             <a-image id="test" src="models/base 1-10.jpg" position="0 0 0" rotation="-90 0 0" width="" height="" opacity="0.85" transparent="true" alpha-test="0.2" shader="standard" scale="1 1 1" visible="" material="" geometry=""></a-image>
