--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
-        <a-marker type='barcode' value='7'>
-            <a-box position='0 0.5 0' color="yellow"></a-box>
-        </a-marker>
+            <a-marker type='barcode' value='7'>
+                <a-box position='0 0.5 0' color="yellow"></a-box>
+            </a-marker>
 
-        <a-marker preset='custom' type='pattern' url='models/pattern-06-barcode.patt'>
-            <a-image id="test" src="models/base 1-10.jpg" position="0 0 0" rotation="-90 0 0" width="" height="" opacity="0.85" transparent="true" alpha-test="0.2" shader="standard" scale="1 1 1" visible="" material="" geometry=""></a-image>
-        </a-marker>
+            <a-marker-camera preset='custom' type='pattern' url='models/pattern-06-barcode.patt'>
+                <a-anchor hit-testing-enabled='true'>
+                    <a-image id="test" src="models/base 1-10.jpg" position="0 0 0" rotation="-90 0 0" width="" height="" opacity="0.85" transparent="true" alpha-test="0.2" shader="standard" scale="1 1 1" visible="" material="" geometry=""></a-image>
+                </a-anchor>
+            </a-marker-camera>
 
-        <a-marker id="animated-marker" type='barcode' value='6'>
-            <a-image id="test" src="models/base 1-10.jpg" position="0 0 0" rotation="-90 0 0" width="" height="" opacity="0.85" transparent="true" alpha-test="0.2" shader="standard" scale="1 1 1" visible="" material="" geometry=""></a-image>
-            <!-- <a-entity
-                animation-mixer
-                gltf-model="#animated-asset"
-                scale="2 2 2">
-            </a-entity> -->
-        </a-marker>
+            <a-marker id="animated-marker" type='barcode' value='6'>
+                <a-image id="test" src="models/base 1-10.jpg" position="0 0 0" rotation="-90 0 0" width="" height="" opacity="0.85" transparent="true" alpha-test="0.2" shader="standard" scale="1 1 1" visible="" material="" geometry=""></a-image>
+                <!-- <a-entity
+                    animation-mixer
+                    gltf-model="#animated-asset"
+                    scale="2 2 2">
+                </a-entity> -->
+            </a-marker>
 
-        <a-entity camera></a-entity>
+            <a-entity camera></a-entity>
         </a-scene>
     </body>
 </html>
