--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
                 <a-image id="test" src="models/base 1-10.jpg" position="0 0 0" rotation="-90 0 0" width="" height="" opacity="0.85" transparent="true" alpha-test="0.2" shader="standard" scale="1 1 1" visible="" material="" geometry=""></a-image>
             </a-marker-camera>
 
+            <a-assets>
+                <a-asset-item id="animated-asset" src="models/ClothSim.fbx"></a-asset-item>
+            </a-assets>
+
             <a-marker id="animated-marker" type='barcode' value='6'>
-                <a-image id="test" src="models/base 1-10.jpg" position="0 0 0" rotation="-90 0 0" width="" height="" opacity="0.85" transparent="true" alpha-test="0.2" shader="standard" scale="1 1 1" visible="" material="" geometry=""></a-image>
-                <!-- <a-entity
+                <!-- <a-image id="test" src="models/base 1-10.jpg" position=" 0 0" rotation="-90 0 0" width="" height="" opacity="0.85" transparent="true" alpha-test="0.2" shader="standard" scale="1 1 1" visible="" material="" geometry=""></a-image> -->
+                <a-entity
                     animation-mixer
-                    gltf-model="#animated-asset"
+                    fbx-model="#animated-asset"
                     scale="2 2 2">
-                </a-entity> -->
+                </a-entity>
             </a-marker>
 
             <a-entity camera></a-entity>
