--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             </a-marker-camera>
 
             <a-assets>
-                <a-asset-item id="animated-asset" src="models/ClothSim.fbx"></a-asset-item>
+                <a-asset-item id="animated-asset" src="models/CesiumMan.gltf"></a-asset-item>
             </a-assets>
 
             <a-marker id="animated-marker" type='barcode' value='6'>
                 <!-- <a-image id="test" src="models/base 1-10.jpg" position=" 0 0" rotation="-90 0 0" width="" height="" opacity="0.85" transparent="true" alpha-test="0.2" shader="standard" scale="1 1 1" visible="" material="" geometry=""></a-image> -->
                 <a-entity
                     animation-mixer
-                    fbx-model="#animated-asset"
+                    gltf-model="#animated-asset"
                     scale="2 2 2">
                 </a-entity>
             </a-marker>
