--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
             </a-marker-camera> -->
 
             <a-assets>
-                <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"></a-asset-item>
+                <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/ClothSim.obj"></a-asset-item>
             </a-assets>
 
             <a-marker id="animated-marker" type='barcode' value='6'>
                 <!-- <a-image id="test" src="models/base 1-10.jpg" position=" 0 0" rotation="-90 0 0" width="" height="" opacity="0.85" transparent="true" alpha-test="0.2" shader="standard" scale="1 1 1" visible="" material="" geometry=""></a-image> -->
                 <a-entity
                     animation-mixer
-                    gltf-model="#animated-asset"
+                    obj-model=”obj: url(https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/ClothSim.obj); 
+                    mtl: url(https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/ClothSim.mtl)”
                     scale="2 2 2">
                 </a-entity>
             </a-marker>
