--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     <script src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
     <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <body style='margin : 0px; overflow: hidden;'>
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
@@ -20,20 +21,46 @@
             </a-marker-camera> -->
 
             <a-assets>
+              <video  id="clothsim" autoplay="true" loop="true" src="https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/Cloth-motion.mp4"></video>
+            </a-assets>
+
+            <a-assets>
                 <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/ClothSim.obj"></a-asset-item>
             </a-assets>
 
             <a-marker id="animated-marker" type='barcode' value='6'>
                 <!-- <a-image id="test" src="models/base 1-10.jpg" position=" 0 0" rotation="-90 0 0" width="" height="" opacity="0.85" transparent="true" alpha-test="0.2" shader="standard" scale="1 1 1" visible="" material="" geometry=""></a-image> -->
-                <a-entity
-                    animation-mixer
-                    obj-model=”obj: url(https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/ClothSim.obj); 
-                    mtl: url(https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/ClothSim.mtl)”
-                    scale="2 2 2">
+                <a-entity scale="1 1 1" rotation="-90 0 0">
+                    <a-video play-on-scan src="#clothsim"></a-video>
                 </a-entity>
+                <!-- <a-entity
+                    animation-mixer
+                    obj-model="#animated-asset"
+                    scale="2 2 2">
+                </a-entity> -->
             </a-marker>
 
             <a-entity camera></a-entity>
         </a-scene>
     </body>
+    <script>
+        AFRAME.registerComponent('vidhandler', {
+          init: function () {
+            this.toggle = false;
+            document.querySelector("#clothsim").pause(); //reference to the video
+          },
+          tick:function(){  
+               if(document.querySelector("a-marker").object3D.visible == true){
+                 if(!this.toggle){
+                   this.toggle = true;
+                   document.querySelector("#clothsim").play();
+                 }
+               }else{
+                 this.toggle = false;
+                 document.querySelector("#clothsim").pause();
+               }
+            }
+         });
+    </script>
+
 </html>
