--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </a-assets>
 
             <a-assets>
-                <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/ClothSim.obj"></a-asset-item>
+                <a-asset-item id="animated-asset" position="0 0 0" src="https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/ClothSim.obj"></a-asset-item>
             </a-assets>
 
             <a-marker id="animated-marker" type='barcode' value='6'>
