--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             </a-marker-camera> -->
 
             <a-assets>
-              <video  id="clothsim" autoplay="true" loop="true" src="https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/Cloth-motion.mp4"></video>
+              <video  id="clothsim" autoplay="true" loop="true" rotation="-90 0 0" width="10" height="15" position="-10 -20 0" src="https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/Cloth-motion.mp4"></video>
             </a-assets>
 
             <a-assets>
-                <a-asset-item id="animated-asset" position="0 0 0" src="https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/ClothSim.obj"></a-asset-item>
+                <a-asset-item id="animated-asset" rotation="-90 0 0" width="10" height="15" position="-10 -20 0" src="https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/ClothSim.obj"></a-asset-item>
             </a-assets>
 
             <a-marker id="animated-marker" type='barcode' value='6'>
