--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
             <a-marker type='barcode' value='7'>
-                <a-box position='0 0.5 0' color="yellow"></a-box>
+                <a-box position='0 0 0' color="yellow"></a-box>
             </a-marker>
 
             <!-- <a-marker-camera type='pattern' url='models/pattern-LandorBase.patt'>
@@ -21,7 +21,7 @@
             </a-marker-camera> -->
 
             <a-assets>
-              <video  id="clothsim" autoplay="true" loop="true" scale="1 1 1" rotation="-90 0 0" width="100" height="125" position="0 0 0" src="https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/Cloth-motion.mp4"></video>
+              <video  id="clothsim" autoplay="true" loop="true" scale="1 1 1" rotation="0 0 0" width="100" height="125" position="0 0 0" src="https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/Cloth-motion.mp4"></video>
             </a-assets>
 
             <a-assets>
@@ -43,7 +43,7 @@
             <a-entity camera></a-entity>
         </a-scene>
     </body>
-    <script>
+    <!-- <script>
         AFRAME.registerComponent('vidhandler', {
           init: function () {
             this.toggle = false;
@@ -61,6 +61,6 @@
                }
             }
          });
-    </script>
+    </script> -->
 
 </html>
