--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a-marker id="animated-marker" type='barcode' value='6'>
                 <a-entity
                     animation-mixer
-                    obj-model="#animated-asset"
+                    gltf-model="#animated-asset"
                     scale="2 2 2">
                 </a-entity>
             </a-marker>
