--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a-entity
                     animation-mixer
                     gltf-model="#animated-asset"
-                    scale="2 2 2">
+                    scale="2 2 2" position="0 0 -5" scale="0.5 0.5 0.5" rotation="-90 0 0">
                 </a-entity>
             </a-marker>
 
