--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a-entity
                 animation-mixer
                 gltf-model="#animated-asset"
-                position="0 0 0" scale="1 1 1" rotation="-90 0 0">
+                position="-5 5 0" scale=".5 .5 .5" rotation="90 90 0">
             </a-entity>
 
             <a-marker-camera id="animated-marker" preset="hiro"></a-marker-camera>
