--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a-entity
                 animation-mixer
                 gltf-model="#animated-asset"
-                position="0 0 0" scale=".5 .5 .5" rotation="0 0 90">
+                position="0 0 0" scale=".2 .2 .2" rotation="0 0 90" opacity="1.0">
             </a-entity>
 
             <a-marker-camera id="animated-marker" preset="hiro"></a-marker-camera>
