--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a-assets>
 
             <a-entity
-                animation-mixer
+                animation-mixer="loop:repeat"
                 gltf-model="#animated-asset"
                 position="0 0 0" scale=".2 .2 .2" rotation="0 0 90" opacity="1.0">
             </a-entity>
