--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 
     <body style='margin : 0px; overflow: hidden;'>
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
-        <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
-
-            <a-marker type='barcode' value='7'>
+        <a-scene embedded arjs>
+            <!-- <a-marker type='barcode' value='7'>
                 <a-box position='0 0 0' color="yellow"></a-box>
-            </a-marker>
-
+            </a-marker> -->
             <a-assets>
                 <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/PriyeshWani/ar-card/master/models/ClothSim.gltf"></a-asset-item>
             </a-assets>
