--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@ function bezierEvaluate(p0, p1, p2, p3, t) {
 </a-assets>
 <!-- END: Unity Compiled Assets -->
 <!-- BEGIN: Add Image Target (marker) -->
-<a-marker id="marker" type="pattern" preset="custom" src="hiro.png" url="hiro.png" emitevents="true" button>
+<a-marker id="marker" type="pattern" preset="custom" src="pattern-hiro.png" url="pattern-hiro.png" emitevents="true" button>
 <!-- END: Add Image Target (marker) -->
 
 <!-- BEGIN: Unity Compiled Objects -->
-<a-video src="#Video_Asset_0" id="Video_0" class="intersectable" width="1" height="1" position="0 0.46 -0.62" rotation="270 0 0" color="#FFFFFF" transparent=False
+<a-video src="#Video_Asset_0" id="Video_0" class="intersectable" width="1" height="1" position="0 0 -1.003" rotation="90 0 0" color="#FFFFFF" transparent=False
 ></a-video>
 <!-- END: Unity Compiled Objects -->
 
