--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ function bezierEvaluate(p0, p1, p2, p3, t) {
 </a-assets>
 <!-- END: Unity Compiled Assets -->
 <!-- BEGIN: Add Image Target (marker) -->
-<a-marker id="marker" type="pattern" preset="custom" src="pattern-hiro.png" url="pattern-hiro.png" emitevents="true" button>
+<a-marker id="marker" type="pattern" preset="custom" src="pattern-hiro.patt" url="pattern-hiro.patt" emitevents="true" button>
 <!-- END: Add Image Target (marker) -->
 
 <!-- BEGIN: Unity Compiled Objects -->
