--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@ function bezierEvaluate(p0, p1, p2, p3, t) {
 
 <!-- BEGIN: Unity Compiled Assets -->
 <a-assets>
-<video id="Video_Asset_0" autoplay="false" loop crossorigin="anonymous" src="videos/Cloth.mp4" webkit-playsinline playsinline controls muted></video>
+<video id="Video_Asset_0" autoplay="false" loop crossorigin="anonymous" src="videos/Cloth_3.mov" webkit-playsinline playsinline controls muted></video>
 </a-assets>
 <!-- END: Unity Compiled Assets -->
 <!-- BEGIN: Add Image Target (marker) -->
-<a-marker id="marker" type="pattern" preset="custom" src="pattern-06-barcode.patt" url="pattern-06-barcode.patt" emitevents="true" button>
+<a-marker id="marker" type="pattern" preset="custom" src="pattern-hiro.patt" url="pattern-hiro.patt" emitevents="true" button>
 <!-- END: Add Image Target (marker) -->
 
 <!-- BEGIN: Unity Compiled Objects -->
-<a-video src="#Video_Asset_0" id="Video_0" class="intersectable" width="2.132078" height="0.9956642" position="1.1457 0 -2.58" rotation="90 270 0" color="#FFFFFF" transparent=False
+<a-video src="#Video_Asset_0" id="Video_0" class="intersectable" width="2.132078" height="0.9956642" position="1.1457 0 -2.58" rotation="90 -270 0" color="#FFFFFF" transparent=False
 ></a-video>
 <!-- END: Unity Compiled Objects -->
 
