--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
 <video id="video" autoplay loop crossOrigin="anonymous" webkit-playsinline style="display:none">
-	<source src="video/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'>
-	<source src="video/sintel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+	<!-- <source src="video/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'> -->
+	<source src="video/Cloth_with_base.mp4" type='video/mp4;'>
 </video>
 		
 <!-- 
