--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
-<video id="video" autoplay="false" loop crossOrigin="anonymous" webkit-playsinline style="display:none">
+<video id="video" autoplay="true" loop crossOrigin="anonymous" webkit-playsinline style="display:none">
 	<source src="video/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'>
     <source src="video/sintel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 </video>
