--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@ function initialize()
 	
 	mesh1 = new THREE.Mesh( geometry1, material1 );
 	mesh1.rotation.x = -Math.PI/2;
+    video.play();
 	
 	markerRoot1.add( mesh1 );
 }
