--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
-<video id="video" autoplay loop crossOrigin="anonymous" webkit-playsinline src="video/sintel.mp4" type="video/mp4">
-	<!-- <source src="video/sintel.ogv" type="video/ogg">
-    <source src="video/sintel.mp4" type="video/mp4"> -->
+<video id="video" autoplay loop crossOrigin="anonymous" webkit-playsinline>
+	<source src="video/Cloth_with_base.ogv" type="video/ogg">
+    <source src="video/Cloth_with_base.mp4" type="video/mp4">
 </video>
 		
 <script>
@@ -49,7 +49,7 @@ function initialize()
 		alpha: true
 	});
 	renderer.setClearColor(new THREE.Color('lightgrey'), 0)
-	renderer.setSize( 640, 480 );
+	renderer.setSize( 480, 640 );
 	renderer.domElement.style.position = 'absolute'
 	renderer.domElement.style.top = '0px'
 	renderer.domElement.style.left = '0px'
