--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
-<video id="video" autoplay loop crossOrigin="anonymous" webkit-playsinline>
+<video id="video" autoplay loop crossOrigin="anonymous" webkit-playsinline style="display:none">
     <source src="video/Cloth_with_base.mp4" type="video/mp4">
 </video>
 		
