--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
 <video id="video" autoplay="false" loop crossOrigin="anonymous" webkit-playsinline style="display:none">
-    <source src="https://github.com/PriyeshWani/ar-card/raw/master/video/Cloth_with_base.mp4" type="video/mp4">
+    <source src="video/Cloth_with_base.mp4" type="video/mp4">
 </video>
 		
 <script>
