--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
-<video id="video" autoplay="false" loop crossOrigin="anonymous" playsinline controls="true" style="display:none">
-    <source src="https://github.com/PriyeshWani/ar-card/blob/master/video/Cloth.mp4?raw=true" type="video/mp4">
+<video id="video" autoplay="false" loop crossorigin="anonymous" playsinline controls="true" style="display:none">
+    <source src="https://github.com/PriyeshWani/ar-card/blob/master/video/Cloth.mp4?raw=true" type="video/mp4" >
 </video>
 		
 <script>
