Updating the video

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
 <video id="video" autoplay="false" loop crossorigin="anonymous" playsinline controls="true" style="display:none">
-    <source src="video/Cloth.mp4" type="video/mp4" >
+    <source src="video/reveal_f_4444.mp4" type="video/mp4" >
 </video>
 		
 <script>
