--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body style='margin : 0px; overflow: hidden; font-family: Monospace;'>
 
-<video id="video" autoplay="false" loop crossorigin="anonymous" playsinline controls="true" style="display:none">
+<video id="video" autoplay="false" mute loop crossorigin="anonymous" playsinline controls="true" style="display:none">
     <source src="video/reveal_f_4444.mp4" type="video/mp4" >
 </video>
 		
@@ -50,8 +50,8 @@ function initialize()
 	renderer.setClearColor(new THREE.Color('lightgrey'), 0)
 	renderer.setSize( 1080, 720 );
 	renderer.domElement.style.position = 'absolute'
-	renderer.domElement.style.top = '-50px'
-	renderer.domElement.style.left = '25px'
+	renderer.domElement.style.top = '-75px'
+	renderer.domElement.style.left = '40px'
 	document.body.appendChild( renderer.domElement );
 
 	clock = new THREE.Clock();
@@ -81,10 +81,10 @@ function initialize()
 		onResize()
 	});
 
-    window.addEventListener('click', function () {
-      var v = document.querySelector('#video');
-      v.play();
-    });
+    // window.addEventListener('click', function () {
+    //   var v = document.querySelector('#video');
+    //   v.play();
+    // });
 	
 	arToolkitContext = new THREEx.ArToolkitContext({
 		cameraParametersUrl: 'data/camera_para.dat',
