--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ function initialize()
 	renderer.setClearColor(new THREE.Color('lightgrey'), 0)
 	renderer.setSize( 1080, 720 );
 	renderer.domElement.style.position = 'absolute'
-	renderer.domElement.style.top = '-100px'
-	renderer.domElement.style.left = '75px'
+	renderer.domElement.style.top = '-150px'
+	renderer.domElement.style.left = '100px'
 	document.body.appendChild( renderer.domElement );
 
 	clock = new THREE.Clock();
@@ -81,10 +81,10 @@ function initialize()
 		onResize()
 	});
 
-    // window.addEventListener('click', function () {
-    //   var v = document.querySelector('#video');
-    //   v.play();
-    // });
+    window.addEventListener('click', function () {
+      var v = document.querySelector('#video');
+      v.play();
+    });
 	
 	arToolkitContext = new THREEx.ArToolkitContext({
 		cameraParametersUrl: 'data/camera_para.dat',
