--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ function initialize()
 	renderer.setClearColor(new THREE.Color('lightgrey'), 0)
 	renderer.setSize( 1080, 720 );
 	renderer.domElement.style.position = 'absolute'
-	renderer.domElement.style.top = '-175px'
-	renderer.domElement.style.left = '120px'
+	renderer.domElement.style.top = '0px'
+	renderer.domElement.style.left = '0px'
 	document.body.appendChild( renderer.domElement );
 
 	clock = new THREE.Clock();
@@ -99,10 +99,10 @@ function initialize()
 	markerRoot1 = new THREE.Group();
 	scene.add(markerRoot1);
 	let markerControls1 = new THREEx.ArMarkerControls(arToolkitContext, markerRoot1, {
-		type: 'pattern', patternUrl: "data/hiro.patt",
+		type: 'pattern', patternUrl: "data/pattern-black-box.patt",
 	})
 
-	let geometry1 = new THREE.PlaneBufferGeometry(10,14, 4,4);
+	let geometry1 = new THREE.PlaneBufferGeometry(2,2, 4,4);
 
 	let video = document.getElementById( 'video' );
 	let texture = new THREE.VideoTexture( video );
